--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-tilt": "^1.0.2",
     "react-tsparticles": "^2.12.2",
     "react-vertical-timeline-component": "^3.6.0",
+    "sass-loader": "^16.0.5",
     "three": "^0.157.0",
     "tsparticles": "^2.12.0",
     "web-vitals": "^2.1.4"
@@ -55,7 +57,7 @@
     "postcss": "^8.4.31",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.5",
-    "sass": "^1.69.0",
+    "sass": "^1.86.3",
     "tailwindcss": "^3.3.3"
   }
 }
